[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-repo-healthcheck"
version = "0.2.0"
description = "A dependency-free CLI dashboard for open-source repository health and Git activity."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Dafenx" }
]
keywords = ["open-source", "maintainers", "repository", "audit", "cli", "git", "metrics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
oss-repo-healthcheck = "oss_repo_healthcheck.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
